--- a/document.tex
+++ b/document.tex
@@ -52,9 +52,9 @@ footsepline, oneside, openright, draft=off, listof=leveldown]{scrreprt}
 \usepackage{nomencl}
 
 % Draft watermark
-\usepackage[firstpage]{draftwatermark}
-\SetWatermarkScale{5}
-\SetWatermarkLightness{0.9}
+%\usepackage[firstpage]{draftwatermark}
+%\SetWatermarkScale{5}
+%\SetWatermarkLightness{0.9}
 
 \usepackage{subcaption} 
 \usepackage[section]{placeins}
@@ -129,13 +129,13 @@ infrastructure involved in the voting process. The main application of such
 e-voting systems are votes with a low number of participants, for example the
 board of directors in a company. The idea is that the participants create an
 ad-hoc network with their mobile devices and then use this network to run a
-secure e-voting protocol. In order to guarantee privacy and verifiability, we are using
-a voting scheme that uses homomorphic tallying. It also provides robustness in the sense
-that it is not possible for a single party to break the voting process just by
-refusing the collaboration at a certain step throughout the voting process. A
-big focus area is also the usability of this system, it should be possible for
-participants without extensive knowledge in the area of information security to
-use this e-voting system.
+secure e-voting protocol. In order to guarantee privacy and verifiability, a
+voting scheme that uses homomorphic tallying is used. It also provides
+robustness in the sense that it is not possible for a single party to break the
+voting process just by refusing the collaboration at a certain step throughout
+the voting process. A big focus area is also the usability of this system, it
+should be possible for participants without extensive knowledge in the area of
+information security to use this e-voting system.
 \end{abstract}
 
 \chapter*{Statutory declaration}
@@ -314,7 +314,7 @@ be implemented part time. It is equivalent to 27 ECTS credits.
 \label{sec:contribution}
 Currently there are a couple of Android apps available in the Google Play
 store\footnote{\url{http://play.google.com/}} which allow to do simple votes, or
-else they are clients of e-voting systems of a specific organization. A
+else they are clients of e-voting systems of a specific organisation. A
 decentralized e-voting system which offers the cryptographic level of this
 project is currently not available. The implementation and the evaluation of
 this project will help to understand further strong and weak points of the CGS97
@@ -332,16 +332,18 @@ implementation of other e-voting schemes.
 
 \section{Outline}
 \label{sec:outline}
-\Vref{cha:brw} gives an overview of the work on which this project has
-been based on. The cryptographic building blocks which we use are discussed,
-as well as the e-voting scheme on which this work is based on. We also discuss
-projects which have been implemented as a preparation of this master's thesis.
-\Vref{cha:results} explains the resulting implementation in detail.
+\Vref{cha:brw} gives an overview of the work on which this project has been
+based on. The cryptographic building blocks which we use are discussed, as well
+as the e-voting scheme on which this work is based on. We also discuss projects
+which have been implemented as a preparation of this master's thesis.
+The project setup and the administrative aspects are covered in
+\Vref{cha:organisation}. \Vref{cha:results} explains the resulting
+implementation in detail.
 \Vref{cha:discussion} reflects on the work which has been done, before ending
 the document with a conclusion that summarizes the achievements
 \myref{cha:conclusion}.
-A handbook of the product which has been implemented during this project can be found in the
-Appendix \myref{cha:handbook}.
+A handbook of the product which has been implemented during this project can be
+found in the Appendix \myref{cha:handbook}.
 
 \chapter{Background and Related Work}
 \label{cha:brw}
@@ -364,7 +366,7 @@ implement. What follows is a non-exhaustive list of these properties.
   \item[Democracy:] Only eligible voters can vote, and each voter can
   cast at most one ballot which will be included in the result.
   \item[Accuracy:] The result is derived from \emph{all} valid
-  votes as they were cast, i.e. cast votes can not be modified. No other factors
+  votes as they were cast, i.e. cast votes cannot be modified. No other factors
   than valid votes can influence the result.
   \item[Universal verifiability:] Anybody, even people who are not involved in
   the voting process, can verify the correctness of the result.
@@ -372,7 +374,7 @@ implement. What follows is a non-exhaustive list of these properties.
   is included in the result as she cast it.
   \item[Privacy:] The e-voting system does not reveal any information about what
   option the voter has chosen.
-  \item[Receipt-freeness:] The voter can not prove to anybody else how
+  \item[Receipt-freeness:] The voter cannot prove to anybody else how
   she voted.
   \item[Coercion-resistance:] The voter cannot be coerced, meaning it is not
   possible to force a voter to vote in a particular way, or prevent a voter to
@@ -395,8 +397,8 @@ statistically unlikely to tip the scale to one side or the other.
 
 \section{Cryptographic Building Blocks}
 \label{sec:buildingblocks}
-The voting scheme that will be used in our system is assembled from some well
-known cryptographic building blocks which are briefly explained in this section.
+The voting scheme that is used in this project is assembled from some
+well known cryptographic building blocks which are briefly explained in this section.
 All these cryptographic building blocks belong to the area of \emph{asymmetric}
 cryptography, which is usually based on a key pair, containing a
 \emph{public key} and a \emph{private key}.
@@ -420,9 +422,9 @@ manner. There are some more sophisticated approaches than the naive way of
 iterating over all elements of the group, for example the baby-step giant-step
 algorithm\footnote{\url{http://en.wikipedia.org/wiki/Baby-step_giant-step}}, but
 it is still not possible to find a solution in polynomial time with respect to
-the order of the group. The security of most of the building blocks we are using
-in this project is based on this problem. Further information concerning the
-discrete logarithm problem can be found in Chapter 3 of the Handbook of Applied
+the order of the group. The security of most of the building blocks which are
+used in this project is based on this problem. Further information concerning
+the discrete logarithm problem can be found in Chapter 3 of the Handbook of Applied
 Cryptography by A. Menezes et. al.
 \cite{book:hac}.
 
@@ -554,8 +556,8 @@ proposed by A. Shamir in 1979 \cite{Shamir79}. This scheme even allows to define
 \textit{threshold}, which defines the minimal amount of participating trustees
 in order to decrypt the result. Such a system is also known as a
 $(t-n)$-threshold scheme, where $n$ defines the number of shares which are
-issued at the beginning and $t$ defines the number of participants needed to
-recover the secret. Equal to the ElGamal cryptosystem, we need two large primes
+issued at the beginning and $t$ defines the minimal number of shares
+needed to recover the secret. Equal to the ElGamal cryptosystem, we need two large primes
 $p$ and $p$ such that $q|p-1$. The prime number $q$ defines the order of a
 subgroup $G_q$ of the multiplicative modular group $\mathbb{Z}^*_p$.
 $\mathbb{Z}_q$ is an additive modular group of order $q$. Having defined these
@@ -652,7 +654,7 @@ prover certain questions about the secret and the verifier answers them. This
 kind of conversations are also known as $\Sigma$-protocols. Of course, the
 prover could just guess the correct answer to the question and cheat, but if the
 verifier repeats the challenge process with a different input, chances are
-almost zero that the prover can guess all the correct answers if he is not in
+almost zero that the prover can guess all the correct answers if she is not in
 fact in possession of the secret. Zero-knowledge proofs offer therefore a
 \textit{probabilistic} security. In the context of e-voting, these
 zero-knowledge proofs are used to make sure that none of the participants are
@@ -662,14 +664,14 @@ cheating.
 \label{sec:nizkp}
 Zero-knowledge proofs as described earlier are \textit{interactive}
 conversations between a prover and a verifier. This also means that the prover
-proofs only to the verifier that she has knowledge of the secret. Of course, any
+proves only to the verifier that she has knowledge of the secret. Of course, any
 observer could observe the conversation, but there is no way to determine
 whether the verifier actually accepts the the proof or not. The verifier could
 of course testify that the prover has the knowledge of the secret, but that
-would require a trust relationship between the observer and the verifier. In an
-e-voting scenario, we need a proof which can be verified by anybody and doesn't
-require an interactive conversation between the verifier and the prover. Such
-proofs are called \textit{non-interactive zero-knowledge proofs} or
+would require a trust relationship between the observer and the verifier. In
+an e-voting scenario, we need a proof which can be verified by anybody and does
+not require an interactive conversation between the verifier and the prover.
+Such proofs are called \textit{non-interactive zero-knowledge proofs} or
 \textit{NIZKPs}. The foundations of these NIZKPs were introduced by A. Fiat and
 A. Shamir in 1986 \cite{FS87}, later known as the \textit{Fiat-Shamir
 heuristic}. Instead of the verifier challenging the prover, the prover
@@ -706,8 +708,9 @@ condition holds:
 	f(s) \stackrel{?}{=} t \otimes \beta^c \notag
 \end{equation}
 
- In the following paragraphs, the different types of proofs are briefly
- explained and we also make the adaption of the schema above.
+ In the following paragraphs, the different types of proofs used in this
+ project are briefly explained and adapted to the generalized scheme explained
+ before.
  
 \subsubsection{Proving the Knowledge of Discrete Logarithm}
 \label{sec:proofknowledgedlog}
@@ -791,7 +794,7 @@ Proofs of validity are used to prove that a certain image of a homomorphic one
 way function is in fact the image of a preimage, and the preimage is an element
 of a set of possible preimages. The proof however does not reveal which preimage
 it actually is. This type of proof is not a straight forward application of the
-generalized scheme of Maurer \cite{Maurer09}, it is rather an OR-combination of
+generalized scheme of Maurer \cite{Maurer09}, it is rather an OR-composition of
 several zero-knowledge proofs of knowledge. The idea is to \emph{simulate}
 accepting conversations for the preimages which do not correspond to the
 calculated image and combine those simulated proofs with the actual proof from
@@ -896,82 +899,12 @@ the protocol can be divided into four different roles:
   At the end of the voting phase, the trustees have to cooperate in order to
   reveal the result of the vote.
   \item \textbf{Observer:} An observer is somebody who wants to verify that all
-  the participants of a voting cycle behave as they are supposed to.
+  the voters and trustees of a voting cycle behave as they are supposed to.
 \end{itemize}
 
-In the scenario of an ad-hoc voting system as we are going to develop during
-this project, the voter, trustee and observer roles can be combined and all
-participants impersonate these roles. The administrator role needs to be
-assigned to one particular participant.
-
-\subsection{Voting Properties}
-\label{sec:secproperties}
-In \Vref{sec:evoting} we discussed some security requirements which
-are desirable for e-voting systems. The following paragraph assesses the CGS97
-protocol against these requirements.
-
-\paragraph{Democracy.} The CGS97 protocol does not specify how the access to
-the virtual voting booth is controlled. The e-voting system which implements
-the CGS97 protocol needs a sufficiently secure authentication mechanism in order to
-fulfill the democracy requirement. The criteria that only one valid vote can be
-cast is also tied to the authentication mechanism.
-
-\paragraph{Accuracy.} A zero-knowledge proof is used to prove that all valid
-ballots are tallied correctly. Since the all the relevant information is
-publicly accessible on the bulletin board, this can be
-verified by anybody.
-
-\paragraph{Universal verifiability.} The bulletin board which is publicly
-available (for voters as well as for observers who don't participate at the
-vote) assures verifiability for anybody. The bulletin board can also
-be seen as a transcript of the conversation between the actors during a voting
-cycle. 
-
-\paragraph{Individual verifiability.} The voter can identify her own vote on
-the bulletin board along with the other votes. By verifying the zero-knowledge
-proofs of the trustees which have been created during the tallying and
-decryption of the result, the voter can be sure that her vote has been included
-in the final result.
-
-\paragraph{Privacy.} The ballot which has been encrypted and cast by the
-voter always remains encrypted unless a sufficient amount of trustees decide
-conspire and decrypt single votes and reveal information on how the participants
-voted.
-
-\paragraph{Receipt-freeness.} A voter using the CGS97 scheme is able to create a
-receipt which can be used to prove to another person which option has been
-chosen. The CGS97 scheme hence does not offer receipt-freeness.
-
-\paragraph{Coercion-resistance.} Coercion resistant protocols have mechanisms
-to allow the voter to lie about the vote when under coercion. The voter pretends
-to vote according to the wish of the coercer while voting in fact according to
-her intention. Unfortunately, CGS97 does not offer this possibility.
-
-\paragraph{Robustness.} The CGS97 protocol offers robustness by including a
-threshold secret sharing mechanism that assures a working system as long as a
-certain number of properly behaving trustees remain in the system. The other
-crucial part which requires robustness is the bulletin board. To achieve
-robustness, the bulletin board should be replicated so that multiple consistent
-instances are available. The CGS97 scheme doesn't specify in detail how this
-should be achieved. A possible approach can be found in \cite{HL09}.
-
-\subsection{Efficiency}
-\label{sec:efficiencyproperties}
-From a voter's perspective, the CGS97 protocol is surprisingly efficient. No
-matter how big the electorate of the voting scenario is, there is only one
-interaction with the e-voting system in order to cast a ballot. This makes the
-protocol very efficient from a usability perspective.
-
-The CGS97 voting scheme is also very efficient in terms of computation steps.
-When we consider a simple \emph{yes-no} vote, the number of computation steps
-are linear with regards to the size of the electorate, as well as the number of
-trustees. The same is true for the trustees who are responsible for the key
-generation and the tallying process.
-
-When we extend the voting scenario from a simple \emph{yes-no} scenario to a
-\emph{one-out-of-k} scenario, additional complexity comes in. The complexity
-depends on the encoding of the ballot, which is discussed in more detail in
-\Vref{sec:ballotencoding}.
+In the case of a decentralized voting system, the voter, trustee and
+observer roles can be combined and all participants impersonate these roles. The
+administrator role needs to be assigned to one particular participant.
 
 \subsection{The Protocol}
 The CGS97 voting scheme has a well defined procedure on how a vote should be
@@ -979,7 +912,7 @@ performed. This procedure is explained in this section. Formally we define the s
 of $n$ trustees as $T=\{\tau_1, \ldots, \tau_n\}$ and the set of $l$
 voters as $V=\{v_1, \ldots, v_l\}$. Furthermore, the role of an
 administrator $A$ needs to be assigned to a participant. The process of these role assignments
-strongly depends on the political structure of the organization which runs
+strongly depends on the political structure of the organisation which runs
 the vote and is considered to be an administrative task and is hence not
 further discussed at this point. The procedure how a vote is performed looks as
 follows:
@@ -1025,6 +958,75 @@ protocol properly. The transcript of the protocol and the result are posted on
 the bulletin board. Furthermore, each participating trustee has to provide a
 proof that he performed his decryption step in a correct fashion.
 
+\subsection{Voting Properties}
+\label{sec:secproperties}
+In \Vref{sec:evoting} we discussed some security requirements which
+are desirable for e-voting systems. The following paragraph assesses the CGS97
+protocol against these requirements.
+
+\paragraph{Democracy.} The CGS97 protocol does not specify how the access to
+the virtual voting booth is controlled. The e-voting system which implements
+the CGS97 protocol needs a sufficiently secure authentication mechanism in order to
+fulfill the democracy requirement. The criteria that only one valid vote can be
+cast is also tied to the authentication mechanism.
+
+\paragraph{Accuracy.} A zero-knowledge proof is used to prove that all valid
+ballots are tallied correctly. Since the all the relevant information is
+publicly accessible on the bulletin board, this can be
+verified by anybody.
+
+\paragraph{Universal verifiability.} The bulletin board which is publicly
+available (for voters as well as for observers who do not participate at the
+vote) assures verifiability for anybody. The bulletin board can also
+be seen as a transcript of the conversation between the actors during a voting
+cycle. 
+
+\paragraph{Individual verifiability.} The voter can identify her own vote on
+the bulletin board along with the other votes. By verifying the zero-knowledge
+proofs of the trustees which are created during the tallying and
+decryption of the result, the voter can be sure that her vote has been included
+in the final result.
+
+\paragraph{Privacy.} The ballot which has been encrypted and cast by the
+voter always remains encrypted unless a sufficient amount of trustees decide
+conspire and decrypt single votes and reveal information on how the participants
+voted.
+
+\paragraph{Receipt-freeness.} A voter using the CGS97 scheme is able to create a
+receipt which can be used to prove to another person which option has been
+chosen. The CGS97 scheme hence does not offer receipt-freeness.
+
+\paragraph{Coercion-resistance.} Coercion resistant protocols have mechanisms
+to allow the voter to lie about the vote when under coercion. The voter pretends
+to vote according to the wish of the coercer while voting in fact according to
+her intention. Unfortunately, CGS97 does not offer this possibility.
+
+\paragraph{Robustness.} The CGS97 protocol offers robustness by including a
+threshold secret sharing mechanism that assures a working system as long as a
+certain number of properly behaving trustees remain in the system. The other
+crucial part which requires robustness is the bulletin board. To achieve
+robustness, the bulletin board should be replicated so that multiple consistent
+instances of the bulletin board are available. The CGS97 scheme doesn't specify
+in detail how this should be achieved. A possible approach can be found in \cite{HL09}.
+
+\subsection{Efficiency}
+\label{sec:efficiencyproperties}
+From a voter's perspective, the CGS97 protocol is surprisingly efficient. No
+matter how big the electorate of the voting scenario is, there is only one
+interaction with the e-voting system in order to cast a ballot. This makes the
+protocol very efficient from a usability perspective.
+
+The CGS97 voting scheme is also very efficient in terms of computation steps.
+When we consider a simple \emph{yes-no} vote, the number of computation steps
+are linear with regards to the size of the electorate, as well as the number of
+trustees. The same is true for the trustees who are responsible for the key
+generation and the tallying process.
+
+When we extend the voting scenario from a simple \emph{yes-no} scenario to a
+\emph{one-out-of-k} scenario, additional complexity comes in. The complexity
+depends on the encoding of the ballot, which is discussed in more detail in
+\Vref{sec:ballotencoding}.
+
 \section{Ballot Encoding}
 \label{sec:ballotencoding}
 In many cases, a voting scenario contains more than simply two options. In order
@@ -1037,10 +1039,10 @@ following.
 \subsection{Multi Encryption Ballot}
 \label{sec:multiencryptionballot}
 In this strategy we treat each option as an individual \emph{yes-no}
-question. To do so, we create an encryption containing a $1$ for a
+question. To do so, an encryption containing a $1$ for a
 \emph{yes}-vote or a $0$ for a \emph{no}-vote for each individual option using
-exponential ElGamal. In order to prove that the encryption indeed contains
-either $0$ or $1$, a proof of validity is required for each individual
+exponential ElGamal is created. In order to prove that the encryption indeed
+contains either $0$ or $1$, a proof of validity is required for each individual
 encryption.
 Furthermore, we need to make sure that each ballot contains exactly one
 \emph{yes}-vote. This can be achieved by creating a validity proof, proving that
@@ -1143,9 +1145,9 @@ of steps as the electorate and the number of options grow.
 \subsection{Single Encryption Ballot}
 \label{sec:singleencryptionballot}
 In this strategy, the choice of each option is encoded in a single value, which
-is then encrypted. To do so, we are using a bit zero vector which is divided
-into equally sized sections for each individual option. Let $k$ be the number of
-options in a vote, and $n$ be the size of the electorate. For this scenario, we need a bit
+is then encrypted. To do so, a bit zero vector which is divided
+into equally sized sections for each individual option is used. Let $k$ be the
+number of options in a vote, and $n$ be the size of the electorate. For this scenario, we need a bit
 vector with $k$ sections, each containing at least $\lceil\log_2 n+1\rceil$
 bits.
 A vote can then be encoded by flipping the least significant bit of the
@@ -1317,8 +1319,8 @@ UniCrypt tries to look at cryptographic functions such as cryptosystems,
 signature systems, hash functions etc. from a mathematical point of view. Cipher
 texts, plain texts, signatures, hashes, etc. are treated as elements of
 algebraic structures, the cryptographic functions are treated as mathematical functions.
-This is necessary because in secure protocols as we use them in the area of
-e-voting, we depend on the plain textbook implementation of the cryptographic functions
+This is necessary because in secure protocols used in the area
+of e-voting, we depend on the plain textbook implementation of the cryptographic functions
 without functions like automatic padding, encoding, etc. This is the main
 difference between UniCrypt and other cryptographic libraries.
 
@@ -1358,8 +1360,8 @@ for decentralized e-voting. It has been designed in 2012 by D. Khader et. al.
 planning to implement a similar application which is able to deal with several
 protocols and more complex voting scenarios.
 
-\chapter{Organization}
-\label{cha:organization}
+\chapter{Organisation}
+\label{cha:organisation}
 This project has been implemented as a master's thesis project during the
 Master of Science in Engineering studies (MSE) at the Bern University of Applied
 Sciences. This project values 27 ECTS credits and was spread among two
@@ -1369,8 +1371,8 @@ The hand in of the project is scheduled for February 7, 2014.
 During the same period, my fellow master student Philémon von Bergen worked on a
 very similar topic \cite{vonBergen14}, namely the implementation of the
 decentralized e-voting system proposed by D. Khader et al. \cite{HKRS12}. There
-was a big collaboration between the two project, mainly for the implementation
-of the graphical user interface. The collaboration between these project also
+was a big collaboration between the two projects, mainly for the implementation
+of the graphical user interface. The collaboration between these projects also
 made it easier to compare the approaches and evaluate the advantages and
 disadvantages of the two approaches.
 
@@ -1393,6 +1395,7 @@ biggest time period.
 	[vgrid, hgrid,
 	group/.style={draw=black, fill=black!50}, y unit chart=0.8cm]{52}
 	\gantttitle{\textbf{Master's Thesis Project Planning}}{52} \\
+	\gantttitle{Calendar weeks 2013 / 2014}{52} \\
 	\gantttitlelist{8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,1,2,3,4,5,6,7}{1}
 	\\
 	\ganttgroup{Writing of project proposal}{1}{6} \\
@@ -1452,7 +1455,7 @@ implemented even after we started with the e-voting logic. We could also provide
 some feedback which has been integrated into UniCrypt by the UniCrypt
 development team.
 
-\section{Source Code Organization}
+\section{Source Code Organisation}
 As a source code repository and a collaboration platform, the free hosting
 platform GitHub\footnote{\url{https://github.com/}} has been chosen. It
 provides Git\footnote{\url{http://git-scm.com/}} source code repositories which
@@ -1522,7 +1525,11 @@ which allows to exchange messages between devices such as smartphones and
 tablets. One device acts as master and starts advertising a group to which other
 devices can join. Once joined into the group, all the devices in the group can
 exchange messages among each other. The communication can happen either in a
-broadcast (one to many) or unicast (one to one) manner.
+broadcast (one to many) or unicast (one to one) manner. The AllJoyn session is
+by default not secured at all, all devices in the same Wi-Fi network can join
+into a group. The security layer used for this project has been built on top of
+this insecure communication layer. The implementation is explained
+in \Vref{sec:bootstraping}.
 
 The original intention was to use InstaCircle \cite{ritter13a} as a
 communication layer. It turned out that this type of completely decentralized
@@ -1539,8 +1546,8 @@ InstaCircle implementation.
 \label{sec:zxing}
 ZXing\footnote{\url{https://code.google.com/p/zxing/}} (pronounced ``Zebra
 Crossing'') is a Java library provided by Google which allows to deal with many
-flavors of bar codes, including QR-codes which we are using in this
-implementation. It provides the logic to encode information into a QR-code and
+flavors of bar codes, including QR-codes which are used in this
+project. It provides the logic to encode information into a QR-code and
 display it on the user interface of the application. It also provides the
 functionality which allows to use the camera of a smartphone/tablet as a scanner
 in order to decode the QR-code which is being displayed on the screen of another
@@ -2508,7 +2515,7 @@ research and is out of scope of this project.
 \label{sec:comparisontopartnerproject}
 During the same period, a project with the same focus, but with a different
 e-voting protocol has been implemented \cite{vonBergen14}
-\myref{cha:organization}. This allows us to compare each others implementation.
+\myref{cha:organisation}. This allows us to compare each others implementation.
 In both projects, the specified e-voting protocol could be implemented
 successfully. Also, both projects share the same user interface, which shows
 that the storyboard is generic. There is only one small deviation in the
